Tasarım üzerinde küçük değişiklikler yapıldı.

--- a/notlarim.html
+++ b/notlarim.html
@@ -4,26 +4,26 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Homepage</title>
+    <link rel="stylesheet" href="assets/styles/style.css">
+    <title>Notlarım</title>
 </head>
 <body>
     <header>
         <div class="logo">
-            <img src="img/icon.png" alt="">
+            <img src="assets/images/icon.png" alt="">
             <div class="title">
-                <h3>Zeynep Naz</h3>
+                <span>Zeynep Naz</span>
                 <p>Developer</p>
             </div>
         </div>
         <nav>
             <ul>
-                <li><a href="#" >Giriş</a></li>
-                <li><a href="#">Galeri</a></li>
-                <li><a href="#" class="active">Playlist</a></li>
-                <li><a href="#">Notlarım</a></li>
-                <li><a href="#">Yer İmleri</a></li>
+                <li><a href="giris.html">Giriş</a></li>
+                <li><a href="notlarim.html" class="active">Notlarım</a></li>
                 <li><a href="#">Projelerim</a></li>
+                <li><a href="#">Galeri</a></li>
+                <li><a href="#">Oynatma Listelerim</a></li>
+                <li><a href="#">Yer İmleri</a></li>
             </ul>
         </nav>
 
