projelerim kısmı eklendi

--- a/notlarim.html
+++ b/notlarim.html
@@ -20,7 +20,7 @@
             <ul>
                 <li><a href="giris.html">Giriş</a></li>
                 <li><a href="notlarim.html" class="active">Notlarım</a></li>
-                <li><a href="#">Projelerim</a></li>
+                <li><a href="projelerim.html">Projelerim</a></li>
                 <li><a href="#">Galeri</a></li>
                 <li><a href="#">Oynatma Listelerim</a></li>
                 <li><a href="#">Yer İmleri</a></li>
