--- a/projelerim.html
+++ b/projelerim.html
@@ -5,10 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/styles/style.css">
-    <title>Giriş</title>
+    <title>Projelerim</title>
 </head>
 <body>
-<!---- Navigation ---->
 <header>
     <div class="logo">
         <img src="assets/images/icon.png" alt="">
@@ -19,9 +18,9 @@
     </div>
     <nav>
         <ul>
-            <li><a href="giris.html" class="active">Giriş</a></li>
+            <li><a href="giris.html">Giriş</a></li>
             <li><a href="notlarim.html">Notlarım</a></li>
-            <li><a href="projelerim.html">Projelerim</a></li>
+            <li><a href="projelerim.html" class="active">Projelerim</a></li>
             <li><a href="#">Galeri</a></li>
             <li><a href="#">Oynatma Listelerim</a></li>
             <li><a href="#">Yer İmleri</a></li>
@@ -32,11 +31,9 @@
         <span>Designed & Coded by <br> Zeyyish with ❤️</span>
     </div>
 </header>
-<!---- /Navigation --->
 <main>
-    <!---- Accessibility Buttons ---->
     <div class="buttons">
-        <button>☁️</button>
+        <button>☀️</button>
 
         <div class="font-buttons">
             <button id="normalize_font" onclick="normalize_font()" style="display: none">
@@ -56,62 +53,25 @@
             </button>
         </div>
     </div>
-    <!---- /Accessibility Buttons ---->
+
     <div class="divider"></div>
 
+    <div class="filter">
+        <button></button>
+    </div>
+
     <div class="container">
-        <section class="welcome">
-            <h1>Ben Bla-Bla,</h1>
-            <p>
-                basit bir test metniyim. Lorem Impusum artık yok.
-            </p>
-            <p>
-                İkinci test metniyim, beni dert etme.
-            </p>
-        </section>
-        <section class="socials">
-                <a href="#">
-                    <svg viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg">
-                        <path d="m250 186c-46 0-69 35-69 74 0 44 29 72 68 72 43 0 73-32 73-75 0-44-34-71-72-71zm-1-37c30 0 57 13 77 33 0-22 35-22 35 1v150c-1 10 10 16 16 9 25-25 54-128-14-187-64-56-149-47-195-15-48 33-79 107-49 175 33 76 126 99 182 76 28-12 41 26 12 39-45 19-168 17-225-82-38-68-36-185 67-248 78-46 182-33 244 32 66 69 62 197-2 246-28 23-71 1-71-32v-11c-20 20-47 32-77 32-57 0-108-51-108-108 0-58 51-110 108-110"
-                              fill="#fff"/>
-                    </svg>
-                </a>
-                <a href="#">
-                    <svg viewBox="0 0 128 128" xmlns="http://www.w3.org/2000/svg">
-                        <path d="m21.06 48.73h18.11v58.27h-18.11zm9.06-29a10.5 10.5 0 1 1 -10.5 10.49 10.5 10.5 0 0 1 10.5-10.49"/>
-                        <path d="m50.53 48.73h17.36v8h.24c2.42-4.58 8.32-9.41 17.13-9.41 18.34-.04 21.74 12.03 21.74 27.68v32h-18.11v-28.35c0-6.75-.12-15.44-9.41-15.44s-10.87 7.36-10.87 15v28.79h-18.08z"/>
-                        </svg>
-                </a>
-                <a href="#">
-                    <svg viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg">
-                        <path d="m437 152a72 72 0 0 1 -40 12 72 72 0 0 0 32-40 72 72 0 0 1 -45 17 72 72 0 0 0 -122 65 200 200 0 0 1 -145-74 72 72 0 0 0 22 94 72 72 0 0 1 -32-7 72 72 0 0 0 56 69 72 72 0 0 1 -32 1 72 72 0 0 0 67 50 200 200 0 0 1 -105 29 200 200 0 0 0 309-179 200 200 0 0 0 35-37"
-                              fill="#fff"/>
-                    </svg>
-                </a>
-
-                <a href="#">
-                    <svg viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg">
-                        <path d="m335 499c14 0 12 17 12 17h-182s-2-17 12-17c13 0 16-6 16-12l-1-50c-71 16-86-28-86-28-12-30-28-37-28-37-24-16 1-16 1-16 26 2 40 26 40 26 22 39 59 28 74 22 2-17 9-28 16-35-57-6-116-28-116-126 0-28 10-51 26-69-3-6-11-32 3-67 0 0 21-7 70 26 42-12 86-12 128 0 49-33 70-26 70-26 14 35 6 61 3 67 16 18 26 41 26 69 0 98-60 120-117 126 10 8 18 24 18 48l-1 70c0 6 3 12 16 12z"
-                              fill="#fff"/>
-                    </svg>
-                </a>
-        </section>
-
-
-        <section class="date_list_block">
-            <h1>Work Experience</h1>
-            <div class="item">
-                <div class="label">2020-Present</div>
-                <div>
-                    <h3>Freelancer</h3>
-                    <small>Unfortunately Turkey</small>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam dui magna, imperdiet vel vestibulum ut, finibus ut magna. Phasellus varius aliquet enim, ut efficitur quam suscipit et. Suspendisse urna nisl, sollicitudin sed eleifend at, molestie eu mauris. </p>
-                </div>
+        <div class="project">
+            <!--- use srcset, sizes -->
+            <img class="image" src="https://picsum.photos/920/350" alt=""/>
+            <div class="information">
+                <h2>Project name</h2>
+                <small>time</small>
+                <p>short description</p>
             </div>
-        </section>
+        </div>
     </div>
 </main>
-
 <!---- Screen Saver ---->
 <div id="screen_saver">
     <span id="korisirbiz">körişirbiz</span>
